--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "glob-expand": "^0.1.0",
+    "gulp": "^3.9.1",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-replace": "^0.5.4",
@@ -35,8 +36,7 @@
     "soyparser": "^0.2.2",
     "stream-combiner": "^0.2.2",
     "stream-consume": "^0.1.0",
-    "through2": "^2.0.0",
-    "vinyl-fs": "^2.2.1"
+    "through2": "^2.0.0"
   },
   "devDependencies": {
     "del": "^2.1.0",
